--- a/add-a-cat-to-that/templates/admin-settings.html
+++ b/add-a-cat-to-that/templates/admin-settings.html
@@ -32,7 +32,7 @@
             background-color: #f5f5f5;
         }
 
-        .form-signin {
+        .form-settings-update {
             width: 100%;
             max-width: 330px;
             margin: auto;
@@ -40,7 +40,7 @@
             font-weight: 400;
         }
 
-        .form-signin .form-control {
+        .form-settings-update .form-control {
             position: relative;
             box-sizing: border-box;
             height: auto;
@@ -48,17 +48,17 @@
             font-size: 16px;
         }
 
-        .form-signin .form-control:focus {
+        .form-settings-update .form-control:focus {
             z-index: 2;
         }
 
-        .form-signin input[type="email"] {
+        .form-settings-update input[type="email"] {
             margin-bottom: -1px;
             border-bottom-right-radius: 0;
             border-bottom-left-radius: 0;
         }
 
-        .form-signin input[type="password"] {
+        .form-settings-update input[type="password"] {
             margin-bottom: 10px;
             border-top-left-radius: 0;
             border-top-right-radius: 0;
@@ -66,21 +66,28 @@
     </style>
     <div class="text-center">
 
-        <form class="form-signin" method="post" action="/admin-login">
+        <form class="form-settings-update" method="post" action="/admin-settings-update">
             {% if error %}
                 <div class="alert alert-danger" role="alert">
-                    {{ error | safe }}
+                    {{ error }}
                 </div>
             {% endif %}
 
-            <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+            <h1 class="h3 mb-3 font-weight-normal">Update your email or password:</h1>
             <label for="inputEmail" class="sr-only">Email address</label>
             <input name="email" type="email" id="inputEmail" class="form-control" placeholder="Email address" required
                    autofocus>
-            <label for="inputPassword" class="sr-only">Password</label>
-            <input name="password" type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-            <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+            <label for="inputPassword" class="sr-only">New Password</label>
+            <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+            <button class="btn btn-lg btn-primary btn-block" type="submit">Save</button>
         </form>
+
+
+        <form class="form-settings-update" method="post" action="/register-security-key">
+            <h1 class="h3 mb-3 font-weight-normal">Or do something else:</h1>
+            <button class="btn btn-lg btn-primary btn-block" type="submit">Register a Security Key</button>
+        </form>
+
     </div>
 
 {% endblock %}
