turned off attestation

--- a/add-a-cat-to-that/templates/admin-settings.html
+++ b/add-a-cat-to-that/templates/admin-settings.html
@@ -120,7 +120,7 @@
                 .then((result) => {
                     {#newCredentialInfo = publicKeyCredentialToJSON(newCredentialInfo);#}
                     console.log(result);
-                    // post it back to the server?
+                    // TODO post it back to the server, so server can finish registration
 
                 })
                 .catch((error) => {
