Authentication now works in Chrome.  Firefox has some issues with platform authenticators

--- a/add-a-cat-to-that/templates/admin-login-form.html
+++ b/add-a-cat-to-that/templates/admin-login-form.html
@@ -75,8 +75,7 @@
 
             <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
             <label for="inputEmail" class="sr-only">Email address</label>
-            <input name="email" type="email" id="inputEmail" class="form-control" placeholder="Email address" required
-                   autofocus>
+            <input name="email" type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus value="admin@example.com">
             <label for="inputPassword" class="sr-only">Password</label>
             <input name="password" type="password" id="inputPassword" class="form-control" placeholder="Password" required>
             <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
